@@ -14,7 +14,6 @@ from collections import deque
 import linecache
 import traceback
 import os.path
-import contextvars
 
 log = logging.getLogger(__name__)
 
@@ -142,9 +141,6 @@ class Task(object):
         # Timeout deadline stack
         self._deadlines = []
 
-        # Contextvars support
-        self._context = contextvars.copy_context()
-
     def __repr__(self):
         return f'{type(self).__name__}(id={self.id}, name={self.name!r}, state={self.state!r})'
 
@@ -265,6 +261,7 @@ class ContextTask(Task):
     taskcls keyword argument to the Curio kernel.
     '''
     def __init__(self, coro):
+        import contextvars
         super().__init__(coro)
         self._context = contextvars.copy_context()
 
